--- a/Poll.html
+++ b/Poll.html
@@ -20,7 +20,8 @@
 
 </head>
 <body> 
-	
+  <center>
+
 		<h1>Poll</h1>
 
 
@@ -34,6 +35,11 @@
       <p>SpongeBob Cosmic Shake</p>
       <button data-choice="1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9A6U0ED4Ba_DeSRWI6YD4RfA3nIR7S-z-JasDTmwwH8iOw/viewform?usp=sf_link">Vote</a></button>
     </div>
+    <br>
+    <br>
+    <img id = "FP.JPG" src="FillerPhoto.Jpg">
+    <br>
+    <br>
   </div>
   <div class="choice">
     <div class="result">
@@ -43,6 +49,11 @@
       <p>Metroid Dread</p>
       <button data-choice="2"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9A6U0ED4Ba_DeSRWI6YD4RfA3nIR7S-z-JasDTmwwH8iOw/viewform?usp=sf_link">Vote</a></button>
     </div>
+     <br>
+    <br>
+    <img = src="MetroidDread.Jpg">
+    <br>
+    <br>
   </div>
   <div class="choice">
     <div class="result">
@@ -52,20 +63,35 @@
       <p>Sonic Superstars</p>
       <button data-choice="3"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9A6U0ED4Ba_DeSRWI6YD4RfA3nIR7S-z-JasDTmwwH8iOw/viewform?usp=sf_link">Vote</a></button>
     </div>
+     <br>
+    <br>
+    <img src="SonicSuperstar.jpg">
+    <br>
+    <br>
     <div class="label">
       <p>Mario Kart</p>
       <button data-choice="4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9A6U0ED4Ba_DeSRWI6YD4RfA3nIR7S-z-JasDTmwwH8iOw/viewform?usp=sf_link">Vote</a></button>
     </div>
+     <br>
+    <br>
+    <img src="MarioKart.jpg">
+    <br>
+    <br>
      <div class="label">
       <p>Super Mario 3d world + Bowserss fury</p>
       <button data-choice="5"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9A6U0ED4Ba_DeSRWI6YD4RfA3nIR7S-z-JasDTmwwH8iOw/viewform?usp=sf_link">Vote</a></button>
+       <br>
+    <br>
+    <img src="M3DW.png">
+    <br>
+    <br>
     </div>
   </div>
 </div>
 
-<img id = "FP.JPG" img src = "FillerPhoto.jpg"> 
 
-
+  
+</center>
 
 
 	</body>
