--- a/Reviews.html
+++ b/Reviews.html
@@ -10,6 +10,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet">
 
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="topnav">
 		<a href="index.html">Home</a>
 		<a href="Reviews.html" class="active">Reviews</a>
@@ -27,16 +30,53 @@
 <center><h2> Spongebob cosmic Shake
 	<br>
 	<br>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+	<br>
+	<br>
 	Metroid Dread
+	<br>
+	<br>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
 	<br>
 	<br>
 	Sonic Superstars
 	<br>
 	<br>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+	<br>
+	<br>
 	Mario Kart
+<br>
+	<br>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
 	<br>
 	<br>
-	Super Mario 3d world + Bowserss fury</center>
+	Super Mario 3d world + Bowserss fury
 <br>
 <br>
-	<img src = "Star.svg.png" alt = "Star" >
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+	<br>
+	<br>
+	</center>
+
+	
