--- a/Reviews.html
+++ b/Reviews.html
@@ -17,8 +17,7 @@
 		<a href="index.html">Home</a>
 		<a href="Reviews.html" class="active">Reviews</a>
 		<a href="StepsToSave.html">Steps To Save </a>
-		<a href="SimularGames.html">Simular Games</a>
-		<a href="Poll.html">Poll</a>
+		x<a href="Poll.html">Poll</a>
 	</div>
 
 </head>
@@ -79,4 +78,4 @@
 	<br>
 	</center>
 
-	
+
