--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<a href="index.html" class="active">Home</a>
 		<a href="Reviews.html">Reviews</a>
 		<a href="StepsToSave.html">Steps To Save </a>
-		<a href="SimularGames.html">Simular Games</a>
 		<a href="Poll.html">Poll</a>
 	</div>
 
@@ -39,8 +38,8 @@
 									<h2> Super Mario 3d world + Bowsers's fury
 										<br>
 										<br>
-										<img src = "M3DW2.png">
-										<img src = "M3DW3.png">
+									<center>	<img src = "M3DW2.png">
+										<img src = "M3DW3.png"> </center>
 										<br>
 										<br>
 
