--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="index.html" class="active">Home</a>
 		<a href="Reviews.html">Reviews</a>
 		<a href="StepsToSave.html">Steps To Save </a>
-		<a href="Poll.html">Poll</a>
+		<a href="Poll.html">Poll</a>s
 	</div>
 
 </head>
