--- a/Reviews.html
+++ b/Reviews.html
@@ -17,7 +17,7 @@
 		<a href="index.html">Home</a>
 		<a href="Reviews.html" class="active">Reviews</a>
 		<a href="StepsToSave.html">Steps To Save </a>
-		x<a href="Poll.html">Poll</a>
+		<a href="Poll.html">Poll</a>
 	</div>
 
 </head>
