--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 		<p> What Should I Save Up For?
 			<h2>SpongeBob Cosmic Shake
 
-				<center><img src = "SpongeBobCosmicShake.Jpg" alt = "SpongeBob Cosmic Shake"> 
-					<img src = "SpongeBobCosmicShake2.Jpg" alt = "SpongeBob Cosmic Shake 2" >
-					<img src ="SpongebobcosmicShake3.Jpg"/></center>
+				<center><img src = "SpongeBobCosmicShake.jpg" alt = "SpongeBob Cosmic Shake"> 
+					<img src = "SpongeBobCosmicShake2.jpg" alt = "SpongeBob Cosmic Shake 2" >
+					<img src ="SpongebobcosmicShake3.jpg"/></center>
 					<h2>Metroid Dread
-						<center><img src = "MetroidDread.Jpg" alt = "MetroidDread.Jpg" />
-							<img src = "MetroidDread2.Jpg" alt = "MetroidDread.Jpg2" />
-							<img src = "MetroidDread3.Jpg" alt = "MetroidDread.Jpg3" /></center>
+						<center><img src = "MetroidDread.jpg" alt = "MetroidDread.Jpg" />
+							<img src = "MetroidDread2.jpg" alt = "MetroidDread.Jpg2" />
+							<img src = "MetroidDread3.jpg" alt = "MetroidDread.Jpg3" /></center>
 							<h2>Sonic Superstars
-								<center><img src = "SonicSuperstars.Jpg" alt = "SonicSuperstars.Jpg" /></center>
+								<center><img src = "SonicSuperstars.jpg" alt = "SonicSuperstars.Jpg" /></center>
 								<h2>Mario Kart
 									<br>
 									<h2> Super Mario 3d world + Bowsers's fury
