--- a/Poll.html
+++ b/Poll.html
@@ -36,7 +36,7 @@
     </div>
     <br>
     <br>
-    <img id = "FP.JPG" src="FillerPhoto.Jpg">
+    <img id = "FP.JPG" src="FillerPhoto.jpg">
     <br>
     <br>
   </div>
@@ -50,7 +50,7 @@
     </div>
      <br>
     <br>
-    <img = src="MetroidDread.Jpg">
+    <img = src="MetroidDread.jpg">
     <br>
     <br>
   </div>
