--- a/Poll.html
+++ b/Poll.html
@@ -64,7 +64,7 @@
     </div>
      <br>
     <br>
-    <img src="SonicSuperstar.jpg">
+    <img src="SonicSuperstars.jpg">
     <br>
     <br>
     <div class="label">
