--- a/Poll.html
+++ b/Poll.html
@@ -50,7 +50,7 @@
     </div>
      <br>
     <br>
-    <img = src="MetroidDread.jpg">
+    <img src="MetroidDread.jpg">
     <br>
     <br>
   </div>
@@ -64,7 +64,7 @@
     </div>
      <br>
     <br>
-    <img src="SonicSuperstars.jpg">
+    <img src="SonicSuperstars.jpg"/>
     <br>
     <br>
     <div class="label">
