--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<center><img src = "SpongeBobCosmicShake.jpg" alt = "SpongeBob Cosmic Shake"> 
 					<img src = "SpongeBobCosmicShake2.jpg" alt = "SpongeBob Cosmic Shake 2" >
-					<img src ="SpongebobcosmicShake3.jpg"/></center>
+					<img src ="SpongebobCosmicShake3.jpg"/></center>
 					<h2>Metroid Dread
 						<center><img src = "MetroidDread.jpg" alt = "MetroidDread.Jpg" />
 							<img src = "MetroidDread2.jpg" alt = "MetroidDread.Jpg2" />
